# globalmind

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/globalmind/: __about__.py  __init__.py  data.py  schema.py  stratification.py  symptom.py
src/globalmind/_data/: pop_age_sex.csv  urban_pct.csv
